...

    <TextView
            android:id="@+id/usernameText"
            android:layout_width="260dp"
            android:layout_height="25dp"
...

    <TextView
            android:id="@+id/emailText"
            android:layout_width="260dp"
            android:layout_height="25dp"
...

                <TextView
                        android:id="@+id/accountSettingsText"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
...

                <Button
                        android:id="@+id/changeUsernameButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
...
                        android:fontFamily="sans-serif-medium"
                        android:paddingStart="20dp"
                        android:text="@string/change_username"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
...

                <Button
                        android:id="@+id/changeEmailButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
...
                        android:fontFamily="sans-serif-medium"
                        android:paddingStart="20dp"
                        android:text="@string/change_email"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
...

                <Button
                        android:id="@+id/changePasswordButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
...
                        android:fontFamily="sans-serif-medium"
                        android:paddingStart="20dp"
                        android:text="@string/change_password"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
...

                    <CheckBox
                            android:id="@+id/netflixCheckbox"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="48dp"
...

                    <Button
                            android:id="@+id/netflixButton"
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
...

                    <CheckBox
                            android:id="@+id/hboCheckbox"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="48dp"
...

                    <Button
                            android:id="@+id/hboButton"
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
...

                    <CheckBox
                            android:id="@+id/huluCheckbox"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="48dp"
...

                    <Button
                            android:id="@+id/huluButton"
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
...

                    <CheckBox
                            android:id="@+id/amazonPrimeCheckbox"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="48dp"
...

                    <Button
                            android:id="@+id/amazonPrimeButton"
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
...

                    <CheckBox
                            android:id="@+id/disneyCheckbox"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="48dp"
...

                    <Button
                            android:id="@+id/disneyButton"
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
...
                        android:max="100"
                        android:progress="8"
                        android:id="@+id/searchShowAmntSlider"
                        android:layout_weight="5" />

...
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/searchShowAmnt"
                        android:layout_weight="1"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
...

                <Button
                        android:id="@+id/deleteButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
...
