...
                        android:textSize="24sp"
                        android:layout_weight="4" />

                <Button
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/movieEditBtn"
                        android:contentDescription="@string/edit_desc"
                        app:icon="@drawable/edit"
                        android:backgroundTint="?colorSecondary"
                        app:iconPadding="0dp"
                        app:iconTint="?colorOnSecondary"
                        android:paddingLeft="12dp"
...
                            android:layout_marginBottom="5dp"
                            android:text="Year: "
                            android:textColor="?colorOnPrimary"
                            android:textSize="20sp" />

                    <Button
                            android:id="@+id/setFavoriteBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="?colorSecondary"
                            android:text="Set As Favorite Movie"
                            android:textColor="?colorOnSecondary"
                            android:visibility="invisible"
                            tools:visibility="visible" />

                    <Button
                            android:id="@+id/addWatchlistBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="?colorSecondary"
...
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/reviewsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="?colorSecondary"
                    android:text="See Reviews"
...
